--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "docs"
+  "description": "docs",
   "scripts": {
     "dev": "vuepress dev",
     "build": "vuepress build",
